--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
    Public API Request
 ======================================== */
 
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700,800');
 
 * {
 	box-sizing: border-box;
@@ -16,11 +16,19 @@ html, body {
 body {
     font-family: "Nunito", sans-serif;
     text-align: center;
-    background: rgba(235, 235, 235, 0.9);
+    background: rgba(0, 155, 155, 0.2);
 }
 
 header {
-    padding: 15px 5px 5px;
+    padding: 20px 5px 20px;
+    background: rgba(0, 155, 155, 0.6);
+    margin-bottom: 20px;
+}
+
+button:disabled {
+    color: grey !important;
+    background-color: lightgrey !important;
+    border: none;
 }
 
 .header-inner-container {
@@ -29,9 +37,11 @@ header {
 }
 
 header h1 {
-    font-size: 1.25em;
-    color: rgba(50, 50, 50, 0.9);
-    margin-top: 35px;
+    font-size: 2em;
+    font-weight: 800;
+    letter-spacing: 0.1em;
+    color: rgba(255, 255, 255, 0.9);
+    margin-top: 25px;
 }
 
 .search-input {
@@ -76,7 +86,12 @@ header h1 {
     max-width: 1200px;
     margin: auto;
 }
-  
+
+.loading {
+    margin-top: 100px;
+    font-size: 1.3em;
+}
+
 .card {
     display: flex;
     flex-direction: row;
@@ -206,6 +221,8 @@ header h1 {
     transition: .4s ease-out;
     outline: none;
   }
+
+
   
 
 /* ===================================== 
